# taitris

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Gamespace.glade  Gamespace.glade~  Makefile  Menu.glade  Menu.glade~  README.md  doc_config  gtkrc.rc
doc/: unicode.py
doc/html/: angle_8h.html  angle_8h.js  angle_8h__dep__incl.md5  angle_8h_source.html  annotated.html  annotated_dup.js  ansi__code_8h.html  ansi__code_8h.js  ansi__code_8h__dep__incl.md5  ansi__code_8h_source.html  board_8c.html  board_8c.js  board_8c__incl.md5  board_8h.html  board_8h.js  board_8h__dep__incl.md5  board_8h__incl.md5  board_8h_source.html  cell_8h.html  cell_8h.js  cell_8h__dep__incl.md5  cell_8h_source.html  classes.html  core_8c.html  core_8c.js  core_8c__incl.md5  core_8h.html  core_8h.js  core_8h__dep__incl.md5  core_8h__incl.md5  core_8h_source.html  debug_8h.html  debug_8h.js  debug_8h__dep__incl.md5  debug_8h__incl.md5  debug_8h_source.html  debug__state_8c.html  debug__state_8c.js  debug__state_8c__incl.md5  debug__state_8h.html  (+270 more)
doc/latex/: angle_8h.tex  angle_8h__dep__incl.md5  annotated.tex  ansi__code_8h.tex  ansi__code_8h__dep__incl.md5  board_8c.tex  board_8c__incl.md5  board_8h.tex  board_8h__dep__incl.md5  board_8h__incl.md5  cell_8h.tex  cell_8h__dep__incl.md5  core_8c.tex  core_8c__incl.md5  core_8h.tex  core_8h__dep__incl.md5  core_8h__incl.md5  debug_8h.tex  debug_8h__dep__incl.md5  debug_8h__incl.md5  debug__state_8c.tex  debug__state_8c__incl.md5  debug__state_8h.tex  debug__state_8h__dep__incl.md5  debug__state_8h__incl.md5  dir_128a93aeeff33a8423f079f46929dbb3.tex  dir_128a93aeeff33a8423f079f46929dbb3_dep.md5  dir_1c904f016667fbd0231935dbbeb7db4e.tex  dir_1c904f016667fbd0231935dbbeb7db4e_dep.md5  dir_2052808828190f934b76e979ee65af8a.tex  dir_23872dd756413acf5fe1a925fcbdf74a.tex  dir_23872dd756413acf5fe1a925fcbdf74a_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_43596c0b3cf30b801e31b375b5bbc130.tex  dir_43596c0b3cf30b801e31b375b5bbc130_dep.md5  dir_44d5bc2300862405dbe586a8cb303c4f.tex  dir_44d5bc2300862405dbe586a8cb303c4f_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  (+130 more)
res/: Gamespace.glade  Gamespace.glade~  Menu.glade  Menu.glade~
src/: tAItris.c  tAItris.h  test.c
src/core/: board.c  board.h  event.c  event.h  game.c  game.h  game_state.c  game_state.h  gameplay.c  gameplay.h  input.c  input.h  motion.c  motion.h  piece.c  piece.h  score.c  score.h
src/debug/: debug.h
src/engine/: angle.h  board.c  board.h  cell.h  (+7 more)
(+117 files in other folders)
